--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   hex: ^0.2.0
   path_provider: ^2.1.2
   shared_preferences: ^2.2.2
+  flutter_secure_storage: ^10.0.0
 
 dev_dependencies:
   flutter_test:
