--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   path_provider: ^2.1.2
   shared_preferences: ^2.2.2
   flutter_secure_storage: ^10.0.0
+  solana: ^0.32.0
 
 dev_dependencies:
   flutter_test:
