--- a/js/package.json
+++ b/js/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@faker-js/faker": "8.4.1",
+    "@types/qrcode": "^1.5.6",
     "ajv": "^8.17.1",
     "bignumber.js": "^9.3.1",
     "crypto-js": "^4.2.0",
@@ -23,6 +24,7 @@
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.22",
     "moment": "^2.30.1",
+    "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-reconciler": "^0.29.2",
     "rxjs": "^7.8.2",
