--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   shared_preferences: ^2.2.2
   flutter_secure_storage: ^10.0.0
   solana: ^0.32.0
+  crypto: ^3.0.7
+  encrypt: ^5.0.3
 
 dev_dependencies:
   flutter_test:
